Fixed code word wrap

--- a/src/scss/post.scss
+++ b/src/scss/post.scss
@@ -62,4 +62,5 @@ article {
 pre {
   background-color: #3e3e3e;
   padding: 10px;
+  word-wrap: break-word;
 }
